--- a/pythagorean.cabal
+++ b/pythagorean.cabal
@@ -1,14 +1,14 @@
 name:                pythagorean
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Library for numerical text processing
 description:         Please see README.md
-homepage:            https://github.com/githubuser/pythagorean#readme
+homepage:            https://github.com/emaphis/pythagorean#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
-category:            Web
+author:              Ed Maphis
+maintainer:          emaphis85@gmail.com
+copyright:           2016 Ed Maphis
+category:            General
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
@@ -16,13 +16,16 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Tables
   build-depends:       base >= 4.7 && < 5
+                     , QuickCheck >= 2.8.1
+  ghc-options:         -Wall -fno-warn-type-defaults
   default-language:    Haskell2010
 
 executable pythagorean-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N  -fno-warn-type-defaults
   build-depends:       base
                      , pythagorean
   default-language:    Haskell2010
@@ -33,7 +36,9 @@ test-suite pythagorean-test
   main-is:             Spec.hs
   build-depends:       base
                      , pythagorean
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+                     , QuickCheck >= 2.8.1
+                     , hspec >= 2.2.3
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N  -fno-warn-type-defaults
   default-language:    Haskell2010
 
 source-repository head
