--- a/pythagorean.cabal
+++ b/pythagorean.cabal
@@ -17,7 +17,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
                      , Tables
-  build-depends:       QuickCheck >= 2.8.1
+  build-depends:       HUnit >= 1.3.1.1
+                     , QuickCheck >= 2.8.1
                      , base >= 4.7 && < 5
                      , containers >= 0.5.6.2
   ghc-options:         -Wall -fno-warn-type-defaults
@@ -27,7 +28,8 @@ executable pythagorean-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N  -fno-warn-type-defaults
-  build-depends:       base
+  build-depends:       HUnit >= 1.3.1.1
+                     , base
                      , containers >= 0.5.6.2
                      , pythagorean
   default-language:    Haskell2010
@@ -36,7 +38,8 @@ test-suite pythagorean-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       QuickCheck >= 2.8.1
+  build-depends:       HUnit >= 1.3.1.1
+                     , QuickCheck >= 2.8.1
                      , base
                      , containers >= 0.5.6.2
                      , hspec >= 2.2.3
