--- a/pythagorean.cabal
+++ b/pythagorean.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
                      , Tables
+                     , Calcs
   build-depends:       HUnit >= 1.3.1.1
                      , QuickCheck >= 2.8.1
                      , base >= 4.7 && < 5
