--- a/pythagorean.cabal
+++ b/pythagorean.cabal
@@ -19,6 +19,8 @@ library
                      , Tables
                      , Calcs
                      , DateCalcs
+                     , Tables.PrimeTable
+                     , NumCalcs
   build-depends:       HUnit >= 1.3.1.1
                      , QuickCheck >= 2.8.1
                      , base >= 4.7 && < 5
